renomeia os resources para diferenciar a lib do projeto de terceiros

--- a/app/src/main/res/layout/custom_page_activity.xml
+++ b/app/src/main/res/layout/custom_page_activity.xml
@@ -16,18 +16,18 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/spacing_m"
+        android:padding="@dimen/bb_spacing_m"
         android:text="@string/custom_page_description"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/spacing_m"
+        android:layout_marginHorizontal="@dimen/bb_spacing_m"
         android:background="@drawable/group_background"
-        android:padding="@dimen/spacing_s"
+        android:padding="@dimen/bb_spacing_s"
         app:layout_constraintTop_toBottomOf="@id/description">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="override fun "
-            android:textColor="@color/net_entry_put"
+            android:textColor="@color/bb_net_entry_put"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="@id/comment1"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="setupPages"
-            android:textColor="@color/text_highlight"
+            android:textColor="@color/bb_text_highlight"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toEndOf="@id/fun"
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="() {"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toEndOf="@id/fun_name"
@@ -78,8 +78,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="addPage(CustomPageActivity::class) {"
-            android:layout_marginStart="@dimen/spacing_s"
-            android:textColor="@color/text_title"
+            android:layout_marginStart="@dimen/bb_spacing_s"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +90,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/custom_page_code_body"
-            android:layout_marginStart="@dimen/spacing_l"
-            android:textColor="@color/text_title"
+            android:layout_marginStart="@dimen/bb_spacing_l"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,9 +102,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ToolsFragment()"
-            android:paddingStart="@dimen/spacing_s"
-            android:layout_marginStart="@dimen/spacing_l"
-            android:textColor="@color/text_title"
+            android:paddingStart="@dimen/bb_spacing_s"
+            android:layout_marginStart="@dimen/bb_spacing_l"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
@@ -115,8 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="}"
-            android:layout_marginStart="@dimen/spacing_l"
-            android:textColor="@color/text_title"
+            android:layout_marginStart="@dimen/bb_spacing_l"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,8 +127,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="}"
-            android:layout_marginStart="@dimen/spacing_s"
-            android:textColor="@color/text_title"
+            android:layout_marginStart="@dimen/bb_spacing_s"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="}"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             android:textSize="11sp"
             app:fontFamily="@font/courier_regular"
             app:layout_constraintStart_toStartOf="parent"
