--- a/app/src/main/res/layout/group_view.xml
+++ b/app/src/main/res/layout/group_view.xml
@@ -26,11 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:background="@drawable/group_background"
-        android:backgroundTint="@color/background_tertiary"
+        android:backgroundTint="@color/bb_background_tertiary"
         android:foreground="@drawable/group_foreground"
         android:paddingHorizontal="20dp"
         android:paddingVertical="5dp"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/group_container"
         app:layout_constraintStart_toStartOf="parent"
