--- a/content/database/src/main/res/layout/bigbrother_item_table_empty.xml
+++ b/content/database/src/main/res/layout/bigbrother_item_table_empty.xml
@@ -8,4 +8,4 @@
     android:textSize="20sp"
     android:padding="10dp"
     android:gravity="center_horizontal"
-    android:textColor="@color/text_title"/>
+    android:textColor="@color/bb_text_title"/>
