--- a/app/src/main/res/drawable/group_foreground.xml
+++ b/app/src/main/res/drawable/group_foreground.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="10dp"/>
-    <stroke android:width="1dp" android:color="@color/text_title"/>
+    <stroke android:width="1dp" android:color="@color/bb_text_title"/>
 </shape>
