--- a/app/src/main/res/layout/network_activity.xml
+++ b/app/src/main/res/layout/network_activity.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/actions_title"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background"
+        android:background="@color/bb_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/actions_container"
@@ -91,7 +91,7 @@
         android:id="@+id/list_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background"
+        android:background="@color/bb_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
