--- a/app/src/main/res/layout/out_of_domain_activity.xml
+++ b/app/src/main/res/layout/out_of_domain_activity.xml
@@ -16,9 +16,9 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/spacing_m"
+        android:padding="@dimen/bb_spacing_m"
         android:text="@string/out_of_domain_description"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
@@ -26,9 +26,9 @@
         android:id="@+id/sample_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_m"
+        android:layout_margin="@dimen/bb_spacing_m"
         android:background="@drawable/group_background"
-        android:padding="@dimen/spacing_s"
+        android:padding="@dimen/bb_spacing_s"
         app:layout_constraintTop_toBottomOf="@id/description">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:text="\@OutOfDomain"
             android:textSize="11sp"
-            android:textColor="@color/text_highlight"
+            android:textColor="@color/bb_text_highlight"
             app:fontFamily="@font/courier_bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:text="class "
             android:textSize="11sp"
-            android:textColor="@color/net_entry_put"
+            android:textColor="@color/bb_net_entry_put"
             app:fontFamily="@font/courier_bold"
             app:layout_constraintStart_toStartOf="@id/annotation"
             app:layout_constraintTop_toBottomOf="@id/annotation" />
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:textSize="11sp"
             android:text="OutOfDomainActivity : AppCompactActivity()"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             app:fontFamily="@font/courier_bold"
             app:layout_constraintStart_toEndOf="@id/clazz"
             app:layout_constraintTop_toBottomOf="@id/annotation" />
