--- a/app/src/main/res/layout/report_activity.xml
+++ b/app/src/main/res/layout/report_activity.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/actions_title"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background"
+        android:background="@color/bb_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/actions_container"
@@ -81,7 +81,7 @@
         android:id="@+id/list_item"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/background"
+        android:background="@color/bb_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,8 +95,8 @@
                 android:id="@+id/report_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/spacing_s"
-                android:textColor="@color/text_title"
+                android:padding="@dimen/bb_spacing_s"
+                android:textColor="@color/bb_text_title"
                 android:textSize="15sp"
                 app:fontFamily="@font/courier_regular"
                 tools:text="report" />
