--- a/content/common/src/main/res/drawable/bigbrother_content_background.xml
+++ b/content/common/src/main/res/drawable/bigbrother_content_background.xml
@@ -24,7 +24,7 @@
         android:top="10dp">
         <shape android:shape="rectangle">
             <corners android:radius="10dp"/>
-            <solid android:color="@color/background"/>
+            <solid android:color="@color/bb_background"/>
             <stroke android:width="1dp" android:color="@android:color/black"/>
         </shape>
     </item>
@@ -41,7 +41,7 @@
             android:toDegrees="40"
             android:fromDegrees="45">
             <shape android:shape="rectangle">
-                <solid android:color="@color/background"/>
+                <solid android:color="@color/bb_background"/>
             </shape>
         </rotate>
     </item>
