--- a/content/common/src/main/res/drawable/bigbrother_ic_arrow_back.xml
+++ b/content/common/src/main/res/drawable/bigbrother_ic_arrow_back.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="48"
     android:viewportHeight="48">
     <path
-        android:fillColor="@color/text_title"
+        android:fillColor="@color/bb_text_title"
         android:pathData="M24,40 L8,24 24,8l2.1,2.1 -12.4,12.4H40v3H13.7l12.4,12.4Z" />
 </vector>
