--- a/content/common/src/main/res/drawable/bigbrother_ic_arrow_drop_down.xml
+++ b/content/common/src/main/res/drawable/bigbrother_ic_arrow_drop_down.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="960"
     android:viewportHeight="960"
-    android:tint="@color/text_title">
+    android:tint="@color/bb_text_title">
   <path
       android:fillColor="@android:color/white"
       android:pathData="M480,600L280,400L680,400L480,600Z"/>
