--- a/content/common/src/main/res/drawable/bigbrother_ic_close_avd.xml
+++ b/content/common/src/main/res/drawable/bigbrother_ic_close_avd.xml
@@ -11,11 +11,11 @@
             <path
                 android:name="path"
                 android:pathData="M 10.453 35.505 L 12.42 37.617 L 12.274 37.544 L 10.526 35.65 L 10.453 35.505 Z"
-                android:fillColor="@color/text_title"/>
+                android:fillColor="@color/bb_text_title"/>
             <path
                 android:name="path_1"
                 android:pathData="M 10.453 12.344 L 12.527 10.488 L 12.382 10.634 L 10.488 12.236 L 10.453 12.344 Z"
-                android:fillColor="@color/text_title"/>
+                android:fillColor="@color/bb_text_title"/>
         </vector>
     </aapt:attr>
     <target android:name="path">
