--- a/content/common/src/main/res/values/bigbrother_colors.xml
+++ b/content/common/src/main/res/values/bigbrother_colors.xml
@@ -1,39 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#E4E4E4</color>
-    <color name="background_secondary">#F3F3F3</color>
-    <color name="background_tertiary">#FFFFFF</color>
+    <color name="bb_background">#E4E4E4</color>
+    <color name="bb_background_secondary">#F3F3F3</color>
+    <color name="bb_background_tertiary">#FFFFFF</color>
 
-    <color name="themed_transparent">#99FFFFFF</color>
+    <color name="bb_themed_transparent">#99FFFFFF</color>
 
-    <color name="brand_default">@color/moss_green</color>
-    <color name="brand_secondary">@color/boy_red</color>
+    <color name="bb_brand_default">@color/bb_moss_green</color>
+    <color name="bb_brand_secondary">@color/bb_boy_red</color>
 
-    <color name="co_brand_default">#FF242424</color>
-    <color name="co_brand_secondary">#FF000000</color>
+    <color name="bb_co_brand_default">#FF242424</color>
+    <color name="bb_co_brand_secondary">#FF000000</color>
 
-    <color name="text_title">#FF000000</color>
-    <color name="text_title_inverse">#FFFFFFFF</color>
-    <color name="text_paragraph">#636363</color>
-    <color name="text_hyperlink">#FF007BFF</color>
-    <color name="text_highlight">#EBB901</color>
+    <color name="bb_text_title">#FF000000</color>
+    <color name="bb_text_title_inverse">#FFFFFFFF</color>
+    <color name="bb_text_paragraph">#636363</color>
+    <color name="bb_text_hyperlink">#FF007BFF</color>
+    <color name="bb_text_highlight">#EBB901</color>
 
-    <color name="icon_negative">#FF2626</color>
-    <color name="icon_positive">#07B300</color>
+    <color name="bb_icon_negative">#FF2626</color>
+    <color name="bb_icon_positive">#07B300</color>
 
-    <color name="divider">#22000000</color>
+    <color name="bb_divider">#22000000</color>
 
-    <color name="net_entry_post">#03A9F4</color>
-    <color name="net_entry_put">#FF5722</color>
-    <color name="net_entry_get">#4CAF50</color>
-    <color name="net_entry_delete">#FF0000</color>
+    <color name="bb_net_entry_post">#03A9F4</color>
+    <color name="bb_net_entry_put">#FF5722</color>
+    <color name="bb_net_entry_get">#4CAF50</color>
+    <color name="bb_net_entry_delete">#FF0000</color>
 
     <!--region BigBrotherPallet-->
-    <color name="beaver">#9C8C73</color>
-    <color name="shadow">#907665</color>
-    <color name="olive_drab">#5E4D3D</color>
-    <color name="moss_green">#929663</color>
-    <color name="boy_red">#6D6944</color>
-    <color name="licorice">#573C22</color>
+    <color name="bb_beaver">#9C8C73</color>
+    <color name="bb_shadow">#907665</color>
+    <color name="bb_olive_drab">#5E4D3D</color>
+    <color name="bb_moss_green">#929663</color>
+    <color name="bb_boy_red">#6D6944</color>
+    <color name="bb_licorice">#573C22</color>
     <!--endregion-->
 </resources>
