--- a/content/crash/src/main/res/layout/bigbrother_activity_crash.xml
+++ b/content/crash/src/main/res/layout/bigbrother_activity_crash.xml
@@ -27,7 +27,7 @@
                 android:foreground="?selectableItemBackground"
                 android:padding="10dp"
                 android:text="Stacktrace"
-                android:textColor="@color/text_hyperlink"
+                android:textColor="@color/bb_text_hyperlink"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,7 +38,7 @@
                 android:foreground="?selectableItemBackground"
                 android:padding="10dp"
                 android:text="Timeline"
-                android:textColor="@color/text_hyperlink"
+                android:textColor="@color/bb_text_hyperlink"
                 app:layout_constraintStart_toEndOf="@id/crash_stacktrace_button"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,7 +59,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/text_title"
+                        android:textColor="@color/bb_text_title"
                         android:textSize="12sp"
                         android:visibility="visible"
                         app:fontFamily="@font/courier_regular"
@@ -71,7 +71,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/text_title"
+                        android:textColor="@color/bb_text_title"
                         android:textSize="12sp"
                         android:visibility="gone"
                         app:fontFamily="@font/courier_regular"
@@ -97,7 +97,7 @@
         android:id="@+id/crash_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/icon_negative"
+        android:background="@color/bb_icon_negative"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:text="@string/crash_title"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         app:layout_constraintBottom_toBottomOf="@id/close_img_avd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/close_img_avd" />
@@ -132,7 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/crash_screen"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/crash_screen_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +143,7 @@
         android:id="@+id/crash_screen_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/crash_thumb"
