--- a/content/database/src/main/res/drawable/bigbrother_cell_header_za_background.xml
+++ b/content/database/src/main/res/drawable/bigbrother_cell_header_za_background.xml
@@ -3,28 +3,28 @@
     android:shape="rectangle">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background_secondary" />
+            <solid android:color="@color/bb_background_secondary" />
         </shape>
     </item>
     <item
         android:width="1dp"
         android:gravity="start">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" />
+            <solid android:color="@color/bb_background" />
         </shape>
     </item>
     <item
         android:height="1dp"
         android:gravity="bottom">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" />
+            <solid android:color="@color/bb_background" />
         </shape>
     </item>
     <item
         android:height="1dp"
         android:gravity="top">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" />
+            <solid android:color="@color/bb_background" />
         </shape>
     </item>
     <item
