--- a/content/database/src/main/res/layout/bigbrother_dialog_edit_boolean.xml
+++ b/content/database/src/main/res/layout/bigbrother_dialog_edit_boolean.xml
@@ -10,18 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
-        android:layout_marginStart="@dimen/spacing_m"
-        android:padding="@dimen/spacing_m"
-        android:textSize="@dimen/text_m"
+        android:layout_marginStart="@dimen/bb_spacing_m"
+        android:padding="@dimen/bb_spacing_m"
+        android:textSize="@dimen/bb_text_m"
         tools:text="true" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:paddingHorizontal="@dimen/spacing_m"
+        android:paddingHorizontal="@dimen/bb_spacing_m"
         android:text="@string/bigbrother_prefs_string_disclaimer"
-        android:textColor="@color/text_title"
-        android:textSize="@dimen/text_m" />
+        android:textColor="@color/bb_text_title"
+        android:textSize="@dimen/bb_text_m" />
 
 </LinearLayout>
