--- a/content/database/src/main/res/layout/bigbrother_item_shared_preferences.xml
+++ b/content/database/src/main/res/layout/bigbrother_item_shared_preferences.xml
@@ -10,15 +10,15 @@
         android:id="@+id/prefs_item_type"
         android:layout_width="35dp"
         android:layout_height="0dp"
-        android:layout_marginStart="@dimen/spacing_m"
-        android:layout_marginTop="@dimen/spacing_xs"
-        android:layout_marginBottom="@dimen/spacing_xs"
+        android:layout_marginStart="@dimen/bb_spacing_m"
+        android:layout_marginTop="@dimen/bb_spacing_xs"
+        android:layout_marginBottom="@dimen/bb_spacing_xs"
         android:background="@drawable/bigbrother_bg_prefs_type"
         android:gravity="center"
         android:maxLines="1"
-        android:padding="@dimen/spacing_xxs"
-        android:textColor="@color/text_title"
-        android:textSize="@dimen/spacing_m"
+        android:padding="@dimen/bb_spacing_xxs"
+        android:textColor="@color/bb_text_title"
+        android:textSize="@dimen/bb_spacing_m"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,11 +30,11 @@
         android:id="@+id/prefs_item_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_m"
-        android:layout_marginTop="@dimen/spacing_xxs"
-        android:layout_marginEnd="@dimen/spacing_m"
-        android:textColor="@color/text_title"
-        android:textSize="@dimen/text_m"
+        android:layout_marginStart="@dimen/bb_spacing_m"
+        android:layout_marginTop="@dimen/bb_spacing_xxs"
+        android:layout_marginEnd="@dimen/bb_spacing_m"
+        android:textColor="@color/bb_text_title"
+        android:textSize="@dimen/bb_text_m"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/prefs_item_type"
@@ -45,13 +45,13 @@
         android:id="@+id/prefs_item_value"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_xxs"
-        android:layout_marginEnd="@dimen/spacing_m"
-        android:layout_marginBottom="@dimen/spacing_xxs"
+        android:layout_marginTop="@dimen/bb_spacing_xxs"
+        android:layout_marginEnd="@dimen/bb_spacing_m"
+        android:layout_marginBottom="@dimen/bb_spacing_xxs"
         android:ellipsize="end"
         android:maxLines="5"
-        android:textColor="@color/text_paragraph"
-        android:textSize="@dimen/text_m"
+        android:textColor="@color/bb_text_paragraph"
+        android:textSize="@dimen/bb_text_m"
         app:layout_constraintBottom_toBottomOf="@id/prefs_item_type"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/prefs_item_title"
