--- a/content/database/src/main/res/layout/bigbrother_item_table_error.xml
+++ b/content/database/src/main/res/layout/bigbrother_item_table_error.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:textSize="16sp"
-    android:textColor="@color/icon_negative"
+    android:textColor="@color/bb_icon_negative"
     app:fontFamily="@font/courier_regular"
     tools:text="asdas" />
