--- a/content/database/src/main/res/layout/bigbrother_view_filter.xml
+++ b/content/database/src/main/res/layout/bigbrother_view_filter.xml
@@ -33,7 +33,7 @@
                 android:gravity="center_vertical"
                 android:padding="10dp"
                 android:text="Ordenar A - Z"
-                android:textColor="@color/text_title"
+                android:textColor="@color/bb_text_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +48,7 @@
                 android:gravity="center_vertical"
                 android:padding="10dp"
                 android:text="Ordenar Z - A"
-                android:textColor="@color/text_title"
+                android:textColor="@color/bb_text_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_view_sort_az" />
@@ -57,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginHorizontal="1dp"
-                android:background="@color/divider"
+                android:background="@color/bb_divider"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_view_sort_za" />
@@ -72,7 +72,7 @@
                 android:gravity="center_vertical"
                 android:padding="10dp"
                 android:text="Limpar filtros"
-                android:textColor="@color/text_title"
+                android:textColor="@color/bb_text_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_view_sort_za" />
@@ -81,7 +81,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginHorizontal="1dp"
-                android:background="@color/divider"
+                android:background="@color/bb_divider"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/filter_view_clear" />
@@ -121,7 +121,7 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
                 android:text="OK"
-                android:textColor="@color/text_title"
+                android:textColor="@color/bb_text_title"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -135,7 +135,7 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
                 android:text="CANCELAR"
-                android:textColor="@color/text_title"
+                android:textColor="@color/bb_text_title"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toStartOf="@id/filter_view_confirm"
                 app:layout_constraintTop_toTopOf="@id/filter_view_confirm" />
