--- a/content/network/src/main/res/layout/bigbrother_fragment_network.xml
+++ b/content/network/src/main/res/layout/bigbrother_fragment_network.xml
@@ -71,7 +71,7 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/network_empty_state"
-            android:textColor="@color/text_title"
+            android:textColor="@color/bb_text_title"
             android:textSize="17sp" />
 
     </LinearLayout>
