--- a/content/network/src/main/res/layout/bigbrother_item_json_viewer.xml
+++ b/content/network/src/main/res/layout/bigbrother_item_json_viewer.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
         android:paddingStart="10dp"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textStyle="bold"
         tools:text="teste:" />
 
@@ -24,7 +24,7 @@
         android:layout_marginVertical="5dp"
         android:layout_weight="1"
         android:paddingHorizontal="10dp"
-        android:textColor="@color/text_paragraph"
+        android:textColor="@color/bb_text_paragraph"
         android:textStyle="bold"
         tools:text="@string/json_viewer_expand_click" />
 
