--- a/content/report/src/main/res/layout/bigbrother_item_session.xml
+++ b/content/report/src/main/res/layout/bigbrother_item_session.xml
@@ -12,7 +12,7 @@
         android:layout_height="40dp"
         android:layout_marginHorizontal="10dp"
         android:background="@drawable/bigbrother_background_dot"
-        android:backgroundTint="@color/background_secondary"
+        android:backgroundTint="@color/bb_background_secondary"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="@id/session_item_status"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,9 +30,9 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:background="@drawable/bigbrother_background_dot"
-        android:backgroundTint="@color/background_tertiary"
+        android:backgroundTint="@color/bb_background_tertiary"
         android:gravity="center"
-        android:textColor="@color/text_title"
+        android:textColor="@color/bb_text_title"
         android:textSize="7sp"
         android:translationX="-5dp"
         android:translationY="-5dp"
@@ -46,9 +46,9 @@
         android:id="@+id/session_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_m"
-        android:layout_marginTop="@dimen/spacing_m"
-        android:textColor="@color/text_title"
+        android:layout_marginStart="@dimen/bb_spacing_m"
+        android:layout_marginTop="@dimen/bb_spacing_m"
+        android:textColor="@color/bb_text_title"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/session_item_img_place"
@@ -59,7 +59,7 @@
         android:id="@+id/session_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_m"
+        android:layout_margin="@dimen/bb_spacing_m"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="06/08/2023 - 11:00" />
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="@dimen/spacing_m"
+        android:layout_marginBottom="@dimen/bb_spacing_m"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/session_item_title"
         app:layout_constraintTop_toBottomOf="@id/session_item_title"
@@ -78,7 +78,7 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="@color/divider"
+        android:background="@color/bb_divider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
