adiciona UI para cadastrar e visualizar proxies

--- a/content/common/src/main/res/values/bigbrother_styles.xml
+++ b/content/common/src/main/res/values/bigbrother_styles.xml
@@ -31,6 +31,11 @@
         <item name="android:textColor">@color/bb_text_title_inverse</item>
     </style>
 
+    <style name="BigBrotherButtonSmall" parent="Widget.AppCompat.Button.Small">
+        <item name="android:backgroundTint">@color/bb_text_title</item>
+        <item name="android:textColor">@color/bb_text_title_inverse</item>
+    </style>
+
     <style name="SearchView" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
         <item name="boxBackgroundColor">#33000000</item>
         <item name="endIconCheckable">true</item>
