--- a/content/proxy/src/main/res/values/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values/bigbrother_strings.xml
@@ -15,4 +15,8 @@
     <string name="proxy_remove_header_message">To remove a header before the request is executed</string>
     <string name="proxy_set_query_message">To add or edit a query string before the request is executed</string>
     <string name="proxy_remove_query_message">To remove a query string before the request is executed</string>
+
+    <string name="proxy_set_header_description">Adicionar ou editar o header %s para com o valor %s</string>
+    <string name="proxy_set_path_description">Alterar o path request para %s \"%s\"</string>
+    <string name="proxy_set_body_description">Usar o body customizado:</string>
 </resources>
