--- a/content/proxy/src/main/res/layout/bigbrother_activity_proxy.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_activity_proxy.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/proxy_toolbar"
+        android:id="@+id/proxy_rule_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/bb_spacing_m"
                 app:endIconDrawable="@drawable/bigbrother_ic_search"
-                app:helperText="Nesse campo é possível utilizar regex. Utilize * se quiser que essa regra afete todas as chamadas"
+                app:helperText="Utilize * se quiser que essa regra afete todos os paths"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/proxy_rule_condition_title">
@@ -207,11 +207,27 @@
             android:layout_height="1dp"
             android:background="@color/bb_divider" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/proxy_rule_save"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Salvar" />
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/proxy_rule_delete"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:visibility="gone"
+                android:textColor="@color/design_default_color_error"
+                android:layout_height="wrap_content"
+                android:text="Deletar" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/proxy_rule_save"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Salvar" />
+        </LinearLayout>
 
     </FrameLayout>
 
